--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 	</header>
 	<p> 
 
-	  _/_/_/   _/      _/   _/_/_/     _/_/
-	   _/     _/_/    _/  _/        _/    _/
-	  _/     _/  _/  _/    _/_/    _/_/_/_/
-	 _/     _/    _/_/        _/  _/    _/
-       _/_/_/   _/      _/  _/_/_/    _/    _/
-	  <b> The best school</b>
+	<br>  _/_/_/   _/      _/   _/_/_/     _/_/
+	<br>   _/     _/_/    _/  _/        _/    _/
+	<br>  _/     _/  _/  _/    _/_/    _/_/_/_/
+	<br> _/     _/    _/_/        _/  _/    _/
+     <br> _/_/_/   _/      _/  _/_/_/    _/    _/
+	 <br> <b> The best school</b>
 	</p>
       </article>
       
