--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <!-- CC BY-ND 4.0 -->
   
   <a href="http://creativecommons.org/licenses/by-nd/4.0/">
-    <img src=""
+    <img src="/images/CC.png"
 	 title="CC BY-ND 4.0"
 	 alt="CC BY-ND 4.0"
 	 y		 width="88" height="31" /></a>
