--- a/about.html
+++ b/about.html
@@ -137,8 +137,8 @@
       <br>mind: information not found. Still thinking...
       <br>sulfasTor@pc:~$ ls -a
       <br>.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; .genius &nbsp; &nbsp; &nbsp; .intelligence
-      <br>..&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  .linux &nbsp; &nbsp; &nbsp;   .profiency
-      <br>.inovation &nbsp; &nbsp; .GNU &nbsp; &nbsp; &nbsp; &nbsp;  Public
+      <br>..&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  .linux &nbsp; &nbsp; &nbsp;   .proficiency
+      <br>.innovation &nbsp; &nbsp; .GNU &nbsp; &nbsp; &nbsp; &nbsp;  Public
       <br>.imagination &nbsp;  .games &nbsp; &nbsp;  &nbsp; README.md
       
 
