--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
     }
 
     p1{
-    background: #112;
     color: #7BFF00;
     font-weight: 500;
     text-align: left;
@@ -159,7 +158,7 @@
 	  <aside>
 	    <h4>About this</h4>
 	    <p>This is the personal webpage of sulfasTor who likes computer science. He is still a beginner creating webpages. 
-	      <br>This webpage is coded by hand with Emacs.</p>
+	      <br>This webpage is coded by hand with GNU Emacs.</p>
 	    <img src="http://www.emacswiki.org/pics/static/EmacsSplashScreen.png" alt="">
 	  </aside>
 	</div>
