--- a/about.html
+++ b/about.html
@@ -68,8 +68,7 @@
     }
 
     p1{
-    background: #112;
-    color: #7BFF00;
+    color: #00FF00;
     font-weight: 500;
     text-align: left;
     margin-top:0px;
