--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </form>
 	    <!--==================================================================-->
 	    
-	     <br><p style="font-weight: normal"><big style=
+	    <br><p style="font-weight: normal"><big style=
 						    "font-weight: normal"> "Have I not commanded you?<b> Be strong and courageous.</b> Do not be afraid; do not be discouraged, for the Lord your God will be with you wherever you go."
 	      - Joshua 1:9  </big></p>
 
@@ -180,7 +180,7 @@
 		    <img src="images/CC.png"
 			 title="CC BY-ND 4.0"
 			 alt="CC BY-ND 4.0"
-			 y		 width="88" height="31" /></a>
+			 width="88" height="31" /></a>
 		  
 
 		  <!-- CC BY-ND 4.0 -->
