--- a/zhongguo_poems.html
+++ b/zhongguo_poems.html
@@ -179,7 +179,7 @@
 	    <img src="images/CC.png"
 		 title="CC BY-ND 4.0"
 		 alt="CC BY-ND 4.0"
-		 y		 width="88" height="31" /></a>
+		 width="88" height="31" /></a>
 	  
 
 	  <!-- CC BY-ND 4.0 -->
