phishing page example

--- a/index.html
+++ b/index.html
@@ -120,7 +120,6 @@
 	  <li><a href="https://www.stallman.org/comics.html">Jokes</a></li>
 	  <li><a href="index.html">Curriculum vitae</a></li>
 	  <li><a href="zhongguo_poems.html">Chinese Poems</a></li>
-	</ul>
       </nav>
 
     </header>
@@ -149,6 +148,8 @@
               <input type="image" src="images/gnu.png" height="60" width="60" >
             </form>
 	    <!--==================================================================-->
+	    <br>
+	     <li style="color: red;"><a  style="color: red;" href="phishing_example.html">Example d'un site phishing</a></li>	</ul>
 	    
 	    <br><p style="font-weight: normal"><big style=
 						    "font-weight: normal"> "Have I not commanded you?<b> Be strong and courageous.</b> Do not be afraid; do not be discouraged, for the Lord your God will be with you wherever you go."
