phishing page example

--- a/hacked.html
+++ b/hacked.html
@@ -39,7 +39,7 @@
 
     <p><h1> Il n'y a rien de quoi s'inquiéter. Vos informations (nom d'utilisateur et mot de passe) n'ont pas été capturées.</h1></p>
     <p>Prenez conscience sur cette pratique malveillante dans le web, le phishing. Pour plus d'information voir:
-    <a href="https://fr.wikipedia.org/wiki/Hame%C3%A7onnage">Wikipedia, le hameçonnage ou phishing.</a></p>
+    <a href="https://fr.wikipedia.org/wiki/Hame%C3%A7onnage" target="_blank">Wikipedia, le hameçonnage ou phishing.</a></p>
     <p>Peut-être la prochaine fois les pirates ne vous pardonneront. Soyez prudent!</p>
     <br>
     <p> Par ailleurs, visitez mon site: <a href="index.html">sulfasTor Webpage.</a></p>
