--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     color: #111;
     font-family: 'courier', sans-serif;
     font-size: 100%;
+    font-weight: normal
     }
     footer {
     font-family: 'courier', sans-serif;
