--- a/zhongguo_poems.html
+++ b/zhongguo_poems.html
@@ -24,6 +24,7 @@
     color: #111;
     font-family: 'courier', sans-serif;
     font-size: 100%;
+    font-weight: normal
     }
     
     footer {
