--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
     color: #111;
     font-family: 'courier', sans-serif;
     font-size: 100%;
+    font-weight: normal
     }
     footer {
     font-family: 'courier', sans-serif;
