--- a/about.html
+++ b/about.html
@@ -148,7 +148,8 @@
 
     <hr>
     <h2>Random code</h2><br>
-    <!-- HTML generated using hilite.me --><div style="background: #f8f8f8; overflow:auto;width:auto; border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><table><tr><td><pre style="margin: 0; line-height: 125%"> 1
+    <!-- HTML generated using hilite.me --><div style="background: #f8f8f8; overflow:auto;width:auto; border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><table><tr><td><pre style="margin: 0; line-height: 125%">
+	      1
 	      2
 	      3
 	      4
@@ -187,7 +188,8 @@
 	      37
 	      38
 	      39
-	      40</pre></td><td><pre style="margin: 0; line-height: 125%"><span style="color: #008800">#include &lt;stdio.h&gt;</span>
+	      40
+	  </pre></td><td><pre style="margin: 0; line-height: 125%"><span style="color: #008800">#include &lt;stdio.h&gt;</span>
 
 	      <span style="color: #008800">#define N   10</span>
 
