--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@ permalink: /404.html
     
     footer {
     font-family: 'courier', sans-serif;
-    font-size: 100%;
+y    font-size: 100%;
     margin-bottom: 200;
     }
     
@@ -123,11 +123,11 @@ permalink: /404.html
 	<div style="text-align: right;"><p1><b>Developped by sulfasTor</p1></div></header>
       <nav>
 	<ul>
-	  <li><a href="index.html">Home</a></li>
-	  <li id="selected"><a href="about.html">About</a></li>
-	  <li><a href="jokes.html">Jokes</a></li>
-	  <li><a href="index.html">Curriculum vitae</a></li>
-	  <li><a href="zhongguo_poems.html">Chinese Poems</a></li>
+	  <li><a href="http://www.sulf.tk/index.html">Home</a></li>
+	  <li id="selected"><a href="http://www.sulf.tk/about.html">About</a></li>
+	  <li><a href="http://www.sulf.tk/jokes.html">Jokes</a></li>
+	  <li><a href="http://www.sulf.tk/index.html">Curriculum vitae</a></li>
+	  <li><a href="http://www.sulf.tk/zhongguo_poems.html">Chinese Poems</a></li>
       </nav>
 
     </header>
