--- a/zhongguo_poems.html
+++ b/zhongguo_poems.html
@@ -132,7 +132,7 @@
     <div class="col-xs-3 col-sm-4">
     </div>
     <p align="center">
-      <img style="position:absolute; top:215px; right:850px; width:450px; height:300px" src="images/liyu.jpg" alt="">
+      <img style="position:absolute; top:225px; right:800px; width:450px; height:300px" src="images/liyu.jpg" alt="images of li yu">
       <big style="font-size: 30px;">
 	紅日已高三丈透，<br>
 	金爐次第添香獸，<br>
