--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta  NAME="Description" CONTENT="Don't be mad. UPS is hiring you. You better don't enter here." />
     <link rel="icon" type="image/png" href="images/sulf.png" />
     <title>sulfasTor Homepage </title>
   </head>
