--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta  NAME="Description" CONTENT="Don't be mad. UPS is hiring you. You better don't enter here." />
+    <meta name="robots" content="noindex,nofollow">
     <link rel="icon" type="image/png" href="images/sulf.png" />
     <title>sulfasTor Homepage </title>
 
@@ -136,16 +137,15 @@
 	  <h2>Interesting links:</h2>
 	  <!--==================================================================-->
           <a href="http://www.insa-lyon.fr" target="_blank">
-	    <img src="images/insa.png" align="center" style="border: none;max-width:100%;" height="60" width="60" alt="insa"/>
+	    <img src="images/insa.png" align="center" style="border: none;max-width:100%;" height="60" width="60" alt="insa">
 	  </a>
 	  <!--==================================================================-->
-	  <a href="http://www.gnu.org" target="_blank">
-	    <img src="images/gnu.png"  align="center" style="border: none;max-width:100%;" height="60" width="60" alt="gnu"/>
+	  <a href="http://www.gnu.org"  target="_blank">
+	    <img src="images/gnu.png"  align="center" style="border: none;max-width:100%;" height="60" width="60" alt="gnu">
 	  </a>
-
 	  <!--==================================================================-->
 	  <a href="http://www.linuxjournal.com" target="_blank">
-	    <img src="images/logo-lj.jpg" align="center" style="border: none;max-width:100%;" height="60" width="60" alt="linux journal"/>
+	    <img src="images/logo-lj.jpg" align="center" style="border: none;max-width:100%;" height="60" width="60" alt="linux journal">
 	  </a>
 	  <!--==================================================================-->
 	  <br>
@@ -204,18 +204,6 @@
 	</p>
       </div>
     </footer>
-
-    <!-- Google Analytics -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-77249275-1', 'auto');
-      ga('send', 'pageview');
-    </script>
-    <!-- End Google Analytics -->
 
     <!-- ===================== Logos =====================
 	 <hr><div id="footer-logos">
