correction ofile omission

--- a/slides/slide.html
+++ b/slides/slide.html
@@ -258,7 +258,7 @@ One step closer to learn something interesting you are...
 	</p>
 	<img src="img/etape2.png" alt="etape2" width="700" height="150">
 	<p>Problème mathématique simplifié (Exemple pour 5 masselottes)</p>
-	<img src="de2.png" alt="discretisation equation" style="float:right;" width="" height="">
+	<img src="img/de2.png" alt="discretisation equation" style="float:right;" width="" height="">
 	<p style="color:gray; font-size:80%;">Le deuxième modèle contient la problématique du premier modèle.</p>
       </div>
       
