--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	  <li><a href="index.html">Home</a></li>
 	  <li id="selected"><a href="about.html">About</a></li>
 	  <li><a href="jokes.html">Jokes</a></li>
-	  <li><a href="index.html">Curriculum vitae</a></li>
+	  <li><a href="soon.html">Curriculum vitae</a></li>
 	  <li><a href="zhongguo_poems.html">Chinese Poems</a></li>
       </nav>
 
